crates/did-core/src/document/snapshots/vercre_didcore__document__context__tests__deserialize_maps.snap
---
source: did-core/src/document/context.rs
assertion_line: 200
expression: doc
---
"@context":
  - "@base": "https://example.com/keys/"

