crates/did-core/src/document/snapshots/vercre_didcore__document__context__tests__deserialize_single.snap
---
source: did-core/src/document/context.rs
assertion_line: 175
expression: doc
---
"@context": "https://www.w3.org/ns/did/v1"

